tests/paczka1/small_fuzzy/34292924.err
Error in line 5: A621 S34 56,5
Error in line 11: 3A17hHcE S34 18,3
Error in line 13: 3A17hHcE S847 39,2
